--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,11 @@
     grid-template-columns: 50% 50%;
     /* background-color: red; */
   }
+
+  strong {
+    color: red;
+  }
+
+  .strong_2{
+    color: rgb(37, 201, 4) ;
+  }
