--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+:root {
+  --branco-principal: #FFFFFF;
+  --cinza-secundario: #C0C0C0;
+  --botao-azul: #167BF7;
+  --cor-de-fundo: #00030C;
+  --fonte-principal: 'Inter';
+  --botao-azul-efeito: #3c92fa;
+}
+
 .principal {
     background-image: url(img/planodeFundo.jpg);
     background-repeat: no-repeat;
