--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
-    /* background-color: red; */
+    background-color: black;
   }
 
   strong {
