--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,15 @@
   .strong_2{
     color: rgb(37, 201, 4) ;
   }
+
+  h1{
+    color: white;
+  }
+
+  a{
+    color: white;
+  }
+
+  p{
+    color: white;
+  }
